recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:16: error: not found: value lentgh
    avance(lentgh);
           ^