recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  
  if (steps==0) {
    
    return;
  } 
  
  else { 
    
    avance(length);
    gauche(angle);
    
    tree(steps-1,length*shrink,angle,shrink);
    
    droite(angle*2);
    avance(lentgh);
    
    tree(steps-1,length*shrink,angle,shrink);
    
    
    
    
  
  }
  
}